--- a/MVCWebApp/wwwroot/css/site.css
+++ b/MVCWebApp/wwwroot/css/site.css
@@ -6,6 +6,9 @@
   html {
     font-size: 16px;
   }
+  .product-text-area{
+      min-height: 21em !important;
+  }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -19,4 +22,12 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+.sidebar {
+    //background-color: #313a46;
+}
+
+.footer{
+    z-index: 1000;
 }
