Added filtering and sorting

--- a/MVCWebApp/Areas/Admin/Views/Products/Index.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Products/Index.cshtml
@@ -38,10 +38,16 @@
                 @Html.DisplayNameFor(model => product.MainImage)
             </th>
             <th>
-                @Html.DisplayNameFor(model => product.Title)
+                <sort-product-header class="link-dark" action="Index" up="@Model.SortProductsViewModel.Up" current="@Model.SortProductsViewModel.Current" property="@Model.SortProductsViewModel.SortTitle"
+                                     search-title="@Model.SearchTitle" search-category-id="@Model.SearchCategoryId" search-manufacturer-id="@Model.SearchManufacturerId">
+                    @Html.DisplayNameFor(model => product.Title)
+                </sort-product-header>
             </th>
             <th>
-                @Html.DisplayNameFor(model => product.ManufacturerCode)
+                <sort-product-header class="link-dark" action="Index" up="@Model.SortProductsViewModel.Up" current="@Model.SortProductsViewModel.Current" property="@Model.SortProductsViewModel.SortManufacturerCode"
+                                     search-title="@Model.SearchTitle" search-category-id="@Model.SearchCategoryId" search-manufacturer-id="@Model.SearchManufacturerId">
+                    @Html.DisplayNameFor(model => product.ManufacturerCode)
+                </sort-product-header>
             </th>
             <th>
                 @Html.DisplayNameFor(model => product.Description)
@@ -53,10 +59,7 @@
                 @Html.DisplayNameFor(model => product.Manufacturer)
             </th>
             <th>
-                @Html.DisplayNameFor(model => product.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => product.CurrencyType)
+                    @Html.DisplayNameFor(model => product.Price)
             </th>
             <th>
                 @Html.DisplayNameFor(model => product.StockStatus)
@@ -87,10 +90,7 @@
                     @Html.DisplayFor(modelItem => item.Manufacturer.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CurrencyType.Name)
+                    @Html.DisplayFor(modelItem => item.Price) @Html.DisplayFor(modelItem => item.CurrencyType.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.StockStatus.Name)
