--- a/MVCWebApp/Areas/Admin/Views/Manufacturers/Index.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Manufacturers/Index.cshtml
@@ -27,7 +27,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
-                <td>
+                <td class="text-end">
                     <div class="btn-group btn-group-sm">
                         <a class="btn btn-outline-secondary" asp-action="Edit" asp-route-id="@item.Id">Редагувати</a>
                         <a class="btn btn-outline-secondary" asp-action="Details" asp-route-id="@item.Id">Докладніше</a>
