--- a/MVCWebApp/Views/Categories/Index.cshtml
+++ b/MVCWebApp/Views/Categories/Index.cshtml
@@ -21,8 +21,8 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <td class="text-end">
+                    <a asp-action="Details" asp-route-id="@item.Id">Докладніше</a>
                 </td>
             </tr>
         }
