--- a/MVCWebApp/Views/Characteristics/Details.cshtml
+++ b/MVCWebApp/Views/Characteristics/Details.cshtml
@@ -32,5 +32,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index" asp-route-productid="@Model?.ProductId">Back to product</a>
+    <a asp-action="Index" asp-route-productid="@Model?.ProductId">Назад до списку</a>
 </div>
