--- a/MVCWebApp/Views/Products/Details.cshtml
+++ b/MVCWebApp/Views/Products/Details.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Details";
 }
 
-    <a class="btn btn-outline-dark" asp-action="Index">Back to List</a>
+<a class="btn btn-outline-dark" asp-action="Index">Назад до списку</a>
 <hr />
 <div class="row g-5">
     <div class="col-md-12">
