--- a/MVCWebApp/Views/_ViewImports.cshtml
+++ b/MVCWebApp/Views/_ViewImports.cshtml
@@ -1,6 +1,10 @@
 ﻿@using MVCWebApp
 @using MVCWebApp.Models
 @using DAL.Entities
+@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, MVCWebApp
 
