Created xml export and scheduled sending email

--- a/MVCWebApp/Areas/Admin/Views/Categories/Delete.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Categories/Delete.cshtml
@@ -5,7 +5,7 @@
     ViewData["ErrorMessage"] = TempData["ErrorMessage"];
 }
 
-<h1>Видалити категорія</h1>
+<h1>Видалити категорію</h1>
 <hr />
 <div class="btn-group btn-group-sm" role="group">
     <input type="submit" form="deleteForm" value="Видалити" class="btn btn-outline-dark" />
