--- a/MVCWebApp/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/MVCWebApp/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model AccessDeniedModel
 @{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Доступ заборонено";
 }
 
 <header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-center">@ViewData["Title"]</h1>
+    <p class="text-center">Ви не маєте доступу до цієї частини сайту. За додатковою інформацію звертайтеся до адміністратора.</p>
 </header>
