--- a/MVCWebApp/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/MVCWebApp/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using MVCWebApp.Areas.Identity
 @using MVCWebApp.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using MVCWebApp.Areas.Identity.Models
