--- a/MVCWebApp/Views/Products/Index.cshtml
+++ b/MVCWebApp/Views/Products/Index.cshtml
@@ -109,6 +109,7 @@
         }
     )
 }
+<a class="btn btn-primary mb-3" type="submit" asp-area="" asp- controller="Products" asp-action="Export">Експортувати у файл</a>
 
 
 
