--- a/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -25,33 +25,51 @@
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Сайт</a>
+                        </li>
+                        <hr>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Home" asp-action="Index">Загальна інформація</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Categories" asp-action="Index">Categories</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="Categories" asp-action="Index">Категорії</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Products" asp-action="Index">Products</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="Products" asp-action="Index">Товари</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Manufacturers" asp-action="Index">Manufacturers</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="Manufacturers" asp-action="Index">Бренди</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="Users" asp-action="Index">Користувачі</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Products" asp-action="Export">Експорт</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Subscription" asp-action="Index">Підписка</a>
                         </li>
                     </ul>
-                    <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                        <span>Account</span>
-                    </h6>
+                    <hr>
                     <partial name="_LoginPartial" />
                 </div>
+                
+
             </nav>
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-3">
                 <div class="container">
                     @if (@ViewData["ErrorMessage"] is not null)
                     {
-                        <div>
-                            <p class="text-danger">@ViewData["ErrorMessage"]</p>
+                        <div class="alert alert-danger alert-dismissible" role="alert">
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            @ViewData["ErrorMessage"]
+                        </div>
+                    }
+                    @if (@ViewData["StatusMessage"] is not null)
+                    {
+                        <div class="alert alert-success alert-dismissible" role="alert">
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            @ViewData["StatusMessage"]
                         </div>
                     }
                     @RenderBody()
