--- a/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" asp-area="Admin" asp-controller="Home" asp-action="Index">MVCWebApp</a>
+        <a class="navbar-brand navbar-admin col-md-3 col-lg-2 me-0 px-3" asp-area="Admin" asp-controller="Home" asp-action="Index"><img class="logo-img" src="~/logo.png" /></a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -80,7 +80,7 @@
     </div>
     <footer class="border-top footer text-muted bg-dark">
         <div class="container">
-            &copy; 2024 - MVCWebApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Всі права захищені
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
