--- a/MVCWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/MVCWebApp/Views/Shared/_LoginPartial.cshtml
@@ -10,22 +10,22 @@
         @if (User.IsInRole(RoleSettings.AdminRole))
         {
             <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Index">Панель адміністратора</a>
+                <a class="nav-link text-light" asp-area="Admin" asp-controller="Home" asp-action="Index">Панель адміністратора</a>
             </li>
         }
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Аккаунт</a>
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Аккаунт</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Вийти</button>
+                <button type="submit" class="nav-link btn btn-link text-light">Вийти</button>
             </form>
         </li>
     }
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Увійти</a>
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Увійти</a>
         </li>
     }
 </ul>
