--- a/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                             <a class="nav-link" asp-area="Admin" asp-controller="Users" asp-action="Index">Користувачі</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="CurrencyTypes" asp-action="Index">Курси валют</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="Admin" asp-controller="Products" asp-action="Export">Експорт</a>
                         </li>
                         <li class="nav-item">
