--- a/MVCWebApp/Areas/Admin/Views/Categories/Details.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Categories/Details.cshtml
@@ -22,4 +22,12 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
     </dl>
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RozetkaId)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RozetkaId)
+        </dd>
+    </dl>
 </div>
