--- a/MVCWebApp/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Categories/Edit.cshtml
@@ -22,6 +22,11 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="RozetkaId" class="control-label"></label>
+                <input asp-for="RozetkaId" class="form-control" />
+                <span asp-validation-for="RozetkaId" class="text-danger"></span>
+            </div>
         </form>
     </div>
 </div>
