--- a/MVCWebApp/Views/Products/Export.cshtml
+++ b/MVCWebApp/Views/Products/Export.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<DAL.Entities.Product>
+﻿@using BLL.Models
+
+@model IEnumerable<DAL.Entities.Product>
 
 @{
     ViewData["Title"] = "Експорт товарів";
@@ -13,12 +15,16 @@
 <hr />
 <form asp-action="ExportXml" id="exportForm" class="row g-3">
     <div class="form-group col-6">
-        <label for="categoryIds" class="form-label">Категорії:</label>
+        <label for="categoryIds" class="form-label">Оберіть категорії:</label>
         <select name="categoryIds" class="form-select" multiple="" id="categoryIds" asp-items="ViewBag.CategoryId"></select>
     </div>
     <div class="form-group col-6">
-        <label for="manufacturerIds" class="form-label">Бренди:</label>
+        <label for="manufacturerIds" class="form-label">Оберіть бренди:</label>
         <select name="manufacturerIds" class="form-select" multiple="" id="manufacturerIds" asp-items="ViewBag.ManufacturerId"></select>
+    </div>
+    <div class="form-group col-4">
+        <label for="portType" class="form-label">Оберіть тип експорту:</label>
+        <select name="portType" class="form-select" id="portType" asp-items="Html.GetEnumSelectList<PortType>()"></select>
     </div>
 </form>
 
