Addded sort options, modified export and subscription settings, modified frontend styles

--- a/MVCWebApp/Areas/Admin/Views/CurrencyTypes/Create.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/CurrencyTypes/Create.cshtml
@@ -8,7 +8,7 @@
 <h1>Створити валюту</h1>
 <hr />
 <div class="btn-group btn-group-sm" role="group">
-    <input type="submit" form="createForm" value="Створити" class="btn btn-outline-dark" />
+    <input type="submit" form="createForm" value="Зберегти" class="btn btn-outline-dark" />
     <a class="btn btn-outline-dark" asp-action="Index">Скасувати</a>
 </div>
 <hr />
