--- a/MVCWebApp/Areas/Admin/Views/Users/Edit.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Users/Edit.cshtml
@@ -43,7 +43,7 @@
                     @foreach (var role in Model.AllRoles)
                     {
                         <div class="form-check">
-                            <input type="checkbox" name="roles" value="@role.Name" @(Model.UserRoles.Contains(role.Name) ? "checked=\"checked\"" : "") )
+                            <input type="checkbox" name="roles" value="@role.Name" @(Model.UserRoles.Contains(role.Name) ? "checked=checked" : "")
                                    class="form-check-input" />
                             <label class="form-check-label">@role.Name</label>
                         </div>
