--- a/MVCWebApp/Areas/Admin/Views/Characteristics/Create.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Characteristics/Create.cshtml
@@ -8,7 +8,7 @@
 <h1>Створити характеристику</h1>
 <hr />
 <div class="btn-group btn-group-sm" role="group">
-    <input type="submit" form="createForm" value="Створити" class="btn btn-outline-dark" />
+    <input type="submit" form="createForm" value="Зберегти" class="btn btn-outline-dark" />
     <a class="btn btn-outline-dark" asp-controller="Products" asp-action="Edit" asp-route-id="@ViewBag.ProductId">Скасувати</a>
 </div>
 <hr />
