--- a/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="~/MVCWebApp.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body class="admin-body">
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand navbar-admin col-md-3 col-lg-2 me-0 px-3" asp-area="Admin" asp-controller="Home" asp-action="Index"><img class="logo-img" src="~/Media/logo.png" /></a>
+        <a class="navbar-brand navbar-admin col-md-3 col-lg-2 me-0 px-3" asp-area="Admin" asp-controller="Home" asp-action="Index"><img class="logo-img" src="~/Media/logoWhite.png" /></a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
