--- a/MVCWebApp/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/MVCWebApp/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h3>@ViewData["Title"]</h3>
+@*<h3>@ViewData["Title"]</h3>*@
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
     <div class="col-md-6">
@@ -26,11 +26,11 @@
                 </label>
             </div>
             @*
-        <div class="form-floating mb-3">
-            <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Телефон" />
-            <label asp-for="Input.PhoneNumber" class="form-label"></label>
-            <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
-        </div>
+                <div class="form-floating mb-3">
+                    <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Телефон" />
+                    <label asp-for="Input.PhoneNumber" class="form-label"></label>
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
             *@
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-dark">Зберегти</button>
         </form>
