--- a/MVCWebApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/MVCWebApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -10,15 +10,11 @@
     }
 }
 
-<h1>Налаштування аккаунту</h1>
+<h1 class="mb-4">Налаштування аккаунту</h1>
 
 <div>
-    <hr />
     <div class="row">
-        <div class="col-md-3">
-            <partial name="_ManageNav" />
-        </div>
-        <div class="col-md-9">
+        <div class="col-md-12">
             @RenderBody()
         </div>
     </div>
