--- a/MVCWebApp/wwwroot/css/site.css
+++ b/MVCWebApp/wwwroot/css/site.css
@@ -21,7 +21,8 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: #F4F4F4;
 }
 
 .sidebar {
@@ -30,6 +31,7 @@ body {
 
 .logo-img {
     max-height: 42px;
+    padding: 5px 0;
 }
 
 .footer {
@@ -46,8 +48,8 @@ body {
 }
 .custom-pagination .page-item.active .page-link {
     color: #fff;
-    border-color: #6c757d;
-    background-color: #6c757d;
+    border-color: #212529;
+    background-color: #212529;
 }
 
 .custom-pagination .page-link:hover {
@@ -83,4 +85,44 @@ table.productTable thead > tr > th {
 }
 table.productTable tr > td > img {
     max-width: 100px;
-} 
+}
+
+.header-right-dropdown {
+    top: 0 !important;
+    left: auto !important;
+    inset: 0px 0px auto auto;
+    transform: translate3d(1px, 34px, 0px);
+}
+
+.header-right-dropdown .dropdown-item.active, .dropdown-item:active {
+    color: #1e2125;
+    background-color: #e9ecef;
+}
+
+.background-wrapper {
+    padding: 30px 0 46px 0;
+}
+
+main {
+    background: #FFFFFF;
+    padding: 15px;
+    min-height: 70vh;
+}
+
+.link-table-title-dark {
+    text-decoration: none;
+}
+
+.formCheckboxList{
+    max-height: 247px;
+    overflow-y: auto;
+}
+
+.form-check-input:checked {
+    background-color: #212529;
+    border-color: #212529;
+}
+
+.admin-body {
+    background: #ffffff;
+}
