--- a/MVCWebApp/Areas/Admin/Views/Shared/_LoginPartial.cshtml
+++ b/MVCWebApp/Areas/Admin/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
     {
         <div class="dropdown">
             <a href="#" class="d-flex align-items-center nav-link link-body-emphasis text-decoration-none dropdown-toggle px-3" data-bs-toggle="dropdown" aria-expanded="false">
-                <strong>Аккаунт</strong>
+                <strong>Акаунт</strong>
             </a>
             <ul class="dropdown-menu text-small shadow">
                 <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Налаштування</a></li>
