--- a/MVCWebApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/MVCWebApp/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -10,7 +10,7 @@
     }
 }
 
-<h1 class="mb-4">Налаштування аккаунту</h1>
+<h1 class="mb-4">Налаштування акаунту</h1>
 
 <div>
     <div class="row">
