--- a/MVCWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/MVCWebApp/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
     {
         <div class="dropdown">
             <a href="#" class="d-flex align-items-center nav-link link-body-emphasis text-decoration-none text-light dropdown-toggle px-3" data-bs-toggle="dropdown" aria-expanded="false">
-                Аккаунт
+                Акаунт
             </a>
             <ul class="dropdown-menu text-small shadow header-right-dropdown">
                 @if (User.IsInRole(RoleSettings.AdminRole))
